--- a/display-5161bs/Cargo.toml
+++ b/display-5161bs/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "display-5161bs"
+description = "Rust driver for the 7-Segment Display 5161BS"
 version = "0.1.0"
 edition = "2021"
+
+authors = ["Augusto César <me@augustocesar.se>"]
+license = "MIT"
+categories = ["embedded", "hardware-support", "no-std"]
+keywords = ["embedded-hal-driver", "5161BS"]
 
 [dependencies]
 embedded-hal = "1"
