--- a/display-5161bs/Cargo.toml
+++ b/display-5161bs/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 edition = "2021"
 
 authors = ["Augusto César <me@augustocesar.se>"]
+repository = "https://github.com/augustoccesar/segment-displays-rs"
 license = "MIT"
 categories = ["embedded", "hardware-support", "no-std"]
 keywords = ["embedded-hal-driver", "5161BS"]
