--- a/display-5161bs/Cargo.toml
+++ b/display-5161bs/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 authors = ["Augusto César <me@augustocesar.se>"]
 repository = "https://github.com/augustoccesar/segment-displays-rs"
+readme = "README.md"
 license = "MIT"
 categories = ["embedded", "hardware-support", "no-std"]
 keywords = ["embedded-hal-driver", "5161BS"]
