fix: lock display-shared version

--- a/display-3461bs/Cargo.toml
+++ b/display-3461bs/Cargo.toml
@@ -14,4 +14,4 @@ keywords = ["embedded-hal-driver", "3461BS"]
 [dependencies]
 embedded-hal = "1"
 
-display-shared = { path = "../display-shared" }
+display-shared = { version = "0.1", path = "../display-shared" }
